Fix modal border on mobile

--- a/src/components/Modal/Modal.scss
+++ b/src/components/Modal/Modal.scss
@@ -105,6 +105,8 @@ body {
         max-height: 100% !important;
         max-width: 100% !important;
         padding: 16px;
+        border-bottom-left-radius: 0;
+        border-bottom-right-radius: 0;
       }
     }
   }
